Prepare for Jenkins build